# napari-bioformats

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  download_bioformats_samples.py  download_bioformats_test.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
napari_bioformats/: __init__.py  _core.py  _dialogs.py  _downloader.py  _jdk.py  _pims.py
napari_bioformats/_tests/: test_pims.py
napari_pims/_tests/: test_pims.py
napari_pims_bioformats/: __init__.py  pims.py
napari_pims_bioformats/_tests/: test_pims.py
