[metadata]
name = napari-bioformats

author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3
url = https://github.com/tlambert03/napari-bioformats
description = Bioformats for napari, using pims
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-bioformats/issues
    Documentation = https://github.com/tlambert03/napari-bioformats#README.md
    Source Code = https://github.com/tlambert03/napari-bioformats
    User Support = https://github.com/tlambert03/napari-bioformats/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    pims
    jpype1
    ome_types

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points] 
napari.plugin = 
    bioformats = napari_bioformats
