[metadata]
name = napari_bioformats
description = Bioformats for napari, using pims
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/napari-bioformats
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-bioformats/issues
    Documentation = https://github.com/tlambert03/napari-bioformats#README.md
    Source Code = https://github.com/tlambert03/napari-bioformats
    User Support = https://github.com/tlambert03/napari-bioformats/issues

[options]
packages = find:
install_requires =
    jpype1
    napari-plugin-engine>=0.1.4
    numpy
    ome_types
    pims
    requests
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools_scm

[options.entry_points]
napari.plugin =
    bioformats = napari_bioformats

[options.extras_require]
testing =
    pytest
    pytest-cov

[tool:pytest]
filterwarnings =
    error:::
    ignore::DeprecationWarning:pims
    ignore:loci_tools.jar not found::

[flake8]
max-line-length = 88

[isort]
profile = black
